--- a/examples/Tutorial.ipynb
+++ b/examples/Tutorial.ipynb
@@ -139,7 +139,7 @@
    "source": [
     "DOC_PATH = 'sample_data/3M_2022_10K/'\n",
     "PROBLEM = 'Is 3M a capital-intensive business based on FY2022 data?'\n",
-    "GROUTH_TRUTH_ANSWER ='''\n",
+    "GROUND_TRUTH_ANSWER ='''\n",
     "    No, the company is managing its CAPEX and Fixed Assets pretty efficiently,\n",
     "    which is evident from below key metrics:\n",
     "    CAPEX/Revenue Ratio: 5.1%\n",
@@ -180,9 +180,9 @@
     "    print('PROBLEM: ')\n",
     "    print('====================')\n",
     "    print(PROBLEM, '\\n')\n",
-    "    print('GROUTH TRUTH ANSWER: ')\n",
+    "    print('GROUND TRUTH ANSWER: ')\n",
     "    print('====================')\n",
-    "    print(GROUTH_TRUTH_ANSWER, '\\n')\n",
+    "    print(GROUND_TRUTH_ANSWER, '\\n')\n",
     "    print('AGENT\\'S SUMMARIZED ANSWER:')\n",
     "    print('====================')\n",
     "    print(textwrap.fill(summarize_ans(sol), 80))\n",
