Update semiconductor example with SemiKong LM

--- a/examples/semiconductor/semiconductor-demo.ipynb
+++ b/examples/semiconductor/semiconductor-demo.ipynb
@@ -9,13 +9,12 @@
     "import yaml\n",
     "import pdfkit\n",
     "from pathlib import Path\n",
-    "from openssa import (\n",
-    "    Agent,\n",
-    "    AutoHTPlanner,\n",
-    "    OodaReasoner,\n",
-    ")\n",
-    "from openssa.l2.resource.file import FileResource\n",
-    "from IPython.display import display, Markdown"
+    "from openssa.core.agent.agent import Agent\n",
+    "from openssa.core.resource.file import FileResource\n",
+    "from IPython.display import display, Markdown\n",
+    "from semikong_lm import SemiKongLM\n",
+    "from openssa.core.programming.hierarchical.planner import HTPlanner\n",
+    "from openssa.core.program_space import ProgramSpace"
    ]
   },
   {
@@ -63,7 +62,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create agent.\n"
+    "Initialise SemiKong LM in the programmer and executor.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create agent with SemiKong base model for both programmer and executor.\n"
    ]
   },
   {
@@ -73,9 +79,9 @@
    "outputs": [],
    "source": [
     "agent = Agent(\n",
-    "    planner=AutoHTPlanner(),\n",
-    "    reasoner=OodaReasoner(),\n",
     "    resources={FileResource(path=DATA_DIR)},\n",
+    "    programmer=HTPlanner(lm=SemiKongLM.from_defaults()),\n",
+    "    program_space=ProgramSpace(lm=SemiKongLM.from_defaults()),\n",
     ")"
    ]
   },
@@ -102,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "answer = agent.solve(question, dynamic=False)\n",
+    "answer = agent.solve(question)\n",
     "display(Markdown(answer))"
    ]
   },
@@ -137,13 +143,6 @@
     "\n",
     "display(Markdown(chat_completion.choices[0].message.content))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -162,7 +161,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
